# regex-pcre

./: ChangeLog.md  Makefile  README.md  Setup.hs  regex-pcre.cabal
.github/workflows/: haskell-ci.yml
Text/Regex/: PCRE.hs
Text/Regex/PCRE/: ByteString.hs  Sequence.hs  String.hs  Wrap.hsc
Text/Regex/PCRE/ByteString/: Lazy.hs
src/Text/Regex/: PCRE.hs
src/Text/Regex/PCRE/: ByteString.hs  Sequence.hs  String.hs  Wrap.hsc
src/Text/Regex/PCRE/ByteString/: Lazy.hs
test/: Main.hs
