Name:                   regex-pcre
Version:                0.93
Cabal-Version:          >=1.2
License:                BSD3
License-File:           LICENSE
Copyright:              Copyright (c) 2006, Christopher Kuklewicz
Author:                 Christopher Kuklewicz
Maintainer:             TextRegexLazy@personal.mightyreason.com
Stability:              Seems to work, passes a few tests
Homepage:               http://sourceforge.net/projects/lazy-regex
Package-URL:            http://darcs.haskell.org/packages/regex-unstable/regex-pcre/
Synopsis:               Replaces/Enhances Text.Regex
Description:            The PCRE backend to accompany regex-base, see www.pcre.org
Category:               Text
Tested-With:            GHC
flag splitBase
  description: Choose the new smaller, split-up base package.
library
  if flag(splitBase)
    build-depends: base >= 3.0, regex-base >= 0.80, array, containers, bytestring
    CPP-Options: "-DSPLIT_BASE=1"
  else
    build-depends: base < 3.0, regex-base >= 0.80
  -- Data-Files:
  -- Extra-Source-Files:
  -- Extra-Tmp-Files:
  Exposed-Modules:        Text.Regex.PCRE
                          Text.Regex.PCRE.Wrap
                          Text.Regex.PCRE.String
                          Text.Regex.PCRE.Sequence
                          Text.Regex.PCRE.ByteString
                          Text.Regex.PCRE.ByteString.Lazy
  Buildable:              True
  -- Other-Modules:
  -- HS-Source-Dirs:         "."
  Extensions:             MultiParamTypeClasses, FunctionalDependencies, CPP
  -- GHC-Options:            -Wall -Werror -O2
  GHC-Options:            -Wall -O2
  -- GHC-Options:            -Wall -ddump-minimal-imports
  -- GHC-Prof-Options:
  -- Hugs-Options:
  -- NHC-Options:
  -- C-Sources:
  -- Includes:
  -- LD-Options:
  -- Frameworks:
  CC-Options:             -DHAVE_PCRE_H
  Extra-Libraries:        pcre
  --Include-Dirs:           /opt/local/include
  --Extra-Lib-Dirs:         /opt/local/lib
