Cabal-Version:          1.12
Name:                   regex-pcre
Version:                0.94.4.1

build-type:             Simple
license:                BSD3
license-file:           LICENSE
copyright:              Copyright (c) 2006, Christopher Kuklewicz
author:                 Christopher Kuklewicz
maintainer:             hvr@gnu.org
bug-reports:            https://github.com/hvr/regex-pcre
synopsis:               Replaces/Enhances Text.Regex
category:               Text
description:
  <http://pcre.org/ PCRE> backend for <//hackage.haskell.org/package/regex-base regex-base>

extra-source-files:
  ChangeLog.md

flag pkg-config
  default:     True
  manual:      True
  description: Use @pkg-config(1)@ to locate foreign @zlib@ library.

library
  exposed-modules:
      Text.Regex.PCRE
      Text.Regex.PCRE.Wrap
      Text.Regex.PCRE.String
      Text.Regex.PCRE.Sequence
      Text.Regex.PCRE.ByteString
      Text.Regex.PCRE.ByteString.Lazy

  other-modules:
      Paths_regex_pcre

  default-language: Haskell2010
  default-extensions:
      MultiParamTypeClasses
      FunctionalDependencies
      ForeignFunctionInterface
      ScopedTypeVariables
      GeneralizedNewtypeDeriving
      FlexibleContexts
      TypeSynonymInstances
      FlexibleInstances

  build-depends: regex-base == 0.93.*
               , base       >= 4.3 && < 4.13
               , containers >= 0.4 && < 0.7
               , bytestring >= 0.9 && < 0.11
               , array      >= 0.3 && < 0.6

  if flag(pkg-config)
    pkgconfig-depends: libpcre
  else
    extra-libraries: pcre

  ghc-options: -O2
               -Wall
  cc-options:  -DHAVE_PCRE_H
