Cabal-Version:          1.24
Name:                   regex-pcre
Version:                0.95.0.1

build-type:             Simple
license:                BSD3
license-file:           LICENSE
copyright:              Copyright (c) 2006, Christopher Kuklewicz
author:                 Christopher Kuklewicz
maintainer:             Andreas Abel
homepage:               https://wiki.haskell.org/Regular_expressions
bug-reports:            https://github.com/haskell-hvr/regex-pcre/issues
category:               Text

synopsis:    PCRE Backend for "Text.Regex" (regex-base)
description:
  This package provides a <http://pcre.org/ PCRE> backend for the <//hackage.haskell.org/package/regex-base regex-base> API.
  .
  See also <https://wiki.haskell.org/Regular_expressions> for more information.

extra-doc-files:
  ChangeLog.md
  README.md

tested-with:
  GHC == 9.12.1
  GHC == 9.10.1
  GHC == 9.8.4
  GHC == 9.6.6
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

flag pkg-config
  default:     True
  manual:      True
  description: Use @pkg-config(1)@ to locate foreign @pcre@ library.

source-repository head
  type:     git
  location: https://github.com/haskell-hvr/regex-pcre.git

source-repository this
  type:     git
  location: https://github.com/haskell-hvr/regex-pcre.git
  tag:      v0.95.0.1

library
  hs-source-dirs: src
  exposed-modules:
      Text.Regex.PCRE
      Text.Regex.PCRE.Wrap
      Text.Regex.PCRE.String
      Text.Regex.PCRE.Sequence
      Text.Regex.PCRE.ByteString
      Text.Regex.PCRE.ByteString.Lazy

  other-modules:
      Paths_regex_pcre

  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      MultiParamTypeClasses
      FunctionalDependencies
      ForeignFunctionInterface
      ScopedTypeVariables
      GeneralizedNewtypeDeriving
      FlexibleContexts
      TypeSynonymInstances
      FlexibleInstances

  build-depends:
        regex-base == 0.94.*
      , base       >= 4.9  && < 5
      , containers >= 0.5  && < 1
      , bytestring >= 0.10 && < 1
      , array      >= 0.5  && < 1

  if flag(pkg-config)
    pkgconfig-depends: libpcre
  else
    extra-libraries: pcre

  ghc-options:
    -Wall
    -Wcompat
